# consumingchaos.github.io

./: .envrc  .gitignore  .gitmodules  README.md  flake.nix  vaIidate.sh
.github/workflows/: hugo.yaml
examples/cross-compiled-bevy/: .bazelrc  .envrc  BUILD.bazel  README.md  WORKSPACE.bazel
examples/cross-compiled-bevy/app/android/: BUILD.bazel
examples/cross-compiled-bevy/app/android/src/: main.rs
examples/cross-compiled-bevy/app/darwin/: BUILD.bazel
examples/cross-compiled-bevy/app/ios/: BUILD.bazel
examples/cross-compiled-bevy/app/ios/src/: lib.rs
examples/cross-compiled-bevy/app/linux/: BUILD.bazel
examples/cross-compiled-bevy/app/linux/src/: main.rs
examples/cross-compiled-bevy/app/windows/: BUILD.bazel
examples/cross-compiled-bevy/bazel/: nix_repositories.bzl  workspace_root.bzl
examples/cross-compiled-bevy/bazel/cargo/: cargo-bazel-lock.json  crates_repository.bzl
examples/cross-compiled-bevy/bazel/cargo/crates/: alsa-sys.bzl  blake3.bzl  coreaudio-sys.bzl  gilrs.bzl  indexmap-1.9.3.bzl  libc.bzl  libudev-sys.bzl  num-integer-0.1.45.bzl  num-rational.bzl  num-traits.bzl  objc-sys.bzl  syn.bzl  winapi.bzl  windows_x86_64_msvc-0.42.2.bzl  windows_x86_64_msvc-0.48.5.bzl  winit.bzl  x11-dl.bzl
examples/cross-compiled-bevy/bazel/cargo/crates/coreaudio-sys/: BUILD.bazel  darwin.h  ios.h
examples/cross-compiled-bevy/bazel/cargo/crates/x11-dl/: BUILD.bazel  config.rs
examples/cross-compiled-bevy/bazel/rules/: directorygroup.bzl  rust_bindgen.bzl
examples/cross-compiled-bevy/bazel/toolchain_rules/: llvm_cc_toolchain_config.bzl
examples/cross-compiled-bevy/bazel/toolchain_rules/cc_tools/: clang.bzl  ld.lld.bzl  ld64.lld.bzl  llvm_ar.bzl  llvm_strip.bzl  wasm_ld.bzl
examples/cross-compiled-bevy/bazel/toolchains/cc/aarch64-apple-darwin/: BUILD.bazel
examples/cross-compiled-bevy/bazel/toolchains/cc/aarch64-linux-android/: BUILD.bazel
examples/cross-compiled-bevy/bazel/toolchains/cc/x86_64-unknown-nixos-gnu/: BUILD.bazel
examples/cross-compiled-bevy/bazel/toolchains/rust/aarch64-apple-ios/: BUILD.bazel
examples/cross-compiled-bevy/bazel/toolchains/rust/wasm32-unknown-unknown/: BUILD.bazel
examples/cross-compiled-bevy/bazel/toolchains/rust/wasm32-wasi/: BUILD.bazel
examples/cross-compiled-bevy/bazel/toolchains/rust/x86_64-apple-darwin/: BUILD.bazel
examples/cross-compiled-bevy/bazel/toolchains/rust/x86_64-pc-windows-msvc/: BUILD.bazel
examples/cross-compiled-bevy/bazel/toolchains/rust/x86_64-unknown-nixos-gnu/: BUILD.bazel
examples/cross-compiled-bevy/nix/: flake.nix
examples/crosspiled-bevy/: .bazelrc  BUILD  README.md  flake.nix
examples/crosspiled-bevy/bazel/: nix_repositories.bzl
examples/crosspiled-bevy/bazel/toolchain_rules/: llvm_cc_toolchain_config.bzl
examples/crosspiled-bevy/cc_binary/: BUILD
examples/crosspiled-bevy/cc_library/: BUILD
examples/nix-bazel-cross-compiling/: .bazelrc  BUILD  BUILD.bazel  WORKSPACE.bazel  flake.nix
examples/nix-bazel-cross-compiling/bazel/: nix_repositories.bzl
examples/nix-bazel-cross-compiling/bazel/cargo/: cargo-bazel-lock.json  crates_repository.bzl
examples/nix-bazel-cross-compiling/bazel/cargo/crates/: proc_macro2.bzl
examples/nix-bazel-cross-compiling/bazel/toolchain_rules/cc_tools/: clang.bzl  lld-link.bzl  lld_link.bzl
examples/nix-bazel-cross-compiling/bazel/toolchains/cc/aarch64-apple-darwin/: BUILD
examples/nix-bazel-cross-compiling/bazel/toolchains/cc/aarch64-apple-ios/: BUILD  BUILD.bazel
examples/nix-bazel-cross-compiling/bazel/toolchains/cc/aarch64-linux-android/: BUILD
examples/nix-bazel-cross-compiling/bazel/toolchains/cc/aarch64-unknown-linux-gnu/: BUILD  BUILD.bazel
examples/nix-bazel-cross-compiling/bazel/toolchains/cc/wasm32-unknown-unknown/: BUILD  BUILD.bazel
examples/nix-bazel-cross-compiling/bazel/toolchains/cc/wasm32-wasi/: BUILD  BUILD.bazel
examples/nix-bazel-cross-compiling/bazel/toolchains/cc/x86_64-apple-darwin/: BUILD  BUILD.bazel
examples/nix-bazel-cross-compiling/bazel/toolchains/cc/x86_64-pc-windows-msvc/: BUILD.bazel
examples/nix-bazel-cross-compiling/bazel/toolchains/cc/x86_64-unknown-linux-gnu/: BUILD.bazel
examples/nix-bazel-cross-compiling/bazel/toolchains/cc/x86_64-unknown-nixos-gnu/: BUILD
examples/nix-bazel-cross-compiling/bazel/toolchains/rust/aarch64-apple-darwin/: BUILD  BUILD.bazel
examples/nix-bazel-cross-compiling/bazel/toolchains/rust/aarch64-linux-android/: BUILD.bazel
examples/nix-bazel-cross-compiling/bazel/toolchains/rust/aarch64-unknown-linux-gnu/: BUILD.bazel
examples/nix-bazel-cross-compiling/bazel/toolchains/rust/wasm32-wasi/: BUILD
examples/nix-bazel-cross-compiling/bazel/toolchains/rust/x86_64-apple-darwin/: BUILD
examples/nix-bazel-cross-compiling/bazel/toolchains/rust/x86_64-pc-windows-msvc/: BUILD
examples/nix-bazel-cross-compiling/bazel/toolchains/rust/x86_64-unknown-linux-gnu/: BUILD  BUILD.bazel
examples/nix-bazel-cross-compiling/cc_binary/: BUILD.bazel  cc_binary.cc
examples/nix-bazel-cross-compiling/cc_library/: BUILD.bazel  cc_library.cc
examples/nix-bazel-cross-compiling/nix/: flake.nix
examples/nix-bazel-cross-compiling/rust_binary/: BUILD  BUILD.bazel  rust_binary.rs  rust_binary_wasm32-unknown-unknown.rs  rust_binary_wasm32-wasi.rs
examples/nix-bazel-cross-compiling/rust_library/: BUILD  BUILD.bazel  rust_library.rs
examples/nix-bazel-crosspiling/: README.md  WORKSPACE
examples/nix-bazel-crosspiling/bazel/toolchain_rules/: llvm_cc_toolchain_config.bzl
examples/nix-bazel-crosspiling/cc_binary/: cc_binary_wasm32-unknown-unknown.cc
examples/nix-bazel-crosspiling/rust_binary/: rust_binary.rs
examples/nixos-devserver/: bootstrap.sh  flake.nix
examples/nixos-devserver/common/: base.nix  developer.nix  direnvrc  starship.toml  users.nix
examples/nixos-devserver/images/: devserver.nix
hugo/: hugo.yaml
hugo/content/posts/: cross-compiled-bevy.md  crosspiled-bevy.md  hello-world.md  nix-bazel-cross-compiling.md  nix-bazel-crosspiling.md  nixos-devserver.md
hugo/layouts/_default/: single.html
hugo/layouts/shortcodes/: details.html
nix/: flake.nix
(+39 files in other folders)
