load("@rules_rust//rust:defs.bzl", "rust_shared_library")

filegroup(
    name = "android",
    srcs = [
        ":aarch64-linux-android",
    ],
    visibility = ["//visibility:public"],
)

rust_shared_library(
    name = "aarch64-linux-android",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "app",
    platform = "//bazel/platforms:aarch64-linux-android",
    deps = [
        "@crate_index//:bevy",
    ],
)
