load("@rules_rust//rust:defs.bzl", "rust_binary")

filegroup(
    name = "darwin",
    srcs = [
        ":aarch64-apple-darwin",
        ":x86_64-apple-darwin",
    ],
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "aarch64-apple-darwin",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "app",
    platform = "//bazel/platforms:aarch64-apple-darwin",
    deps = [
        "@crate_index//:bevy",
    ],
)

rust_binary(
    name = "x86_64-apple-darwin",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "app",
    platform = "//bazel/platforms:x86_64-apple-darwin",
    deps = [
        "@crate_index//:bevy",
    ],
)
