load("@rules_rust//rust:defs.bzl", "rust_binary")

filegroup(
    name = "linux",
    srcs = [
        ":x86_64-unknown-linux-gnu",
    ],
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "x86_64-unknown-linux-gnu",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "app",
    platform = "//bazel/platforms:x86_64-unknown-linux-gnu",
    deps = [
        "@crate_index//:bevy",
    ],
)
