load("@rules_rust//rust:defs.bzl", "rust_binary")

filegroup(
    name = "windows",
    srcs = [
        ":x86_64-pc-windows-msvc",
    ],
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "x86_64-pc-windows-msvc",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "app",
    platform = "//bazel/platforms:x86_64-pc-windows-msvc",
    deps = [
        "@crate_index//:bevy",
    ],
)
