load("@rules_rust//rust:toolchain.bzl", "rust_toolchain")

rust_toolchain(
    name = "rust_toolchain",
    binary_ext = ".exe",
    cargo = "@nix_rust//:cargo",
    clippy_driver = "@nix_rust//:clippy_driver",
    default_edition = "2021",
    dylib_ext = ".dll",
    env = {},
    exec_triple = "x86_64-unknown-nixos-gnu",
    extra_exec_rustc_flags = [],
    extra_rustc_flags = [],
    rust_doc = "@nix_rust//:rustdoc",
    rust_std = "@nix_rust//:rust_std-x86_64-pc-windows-msvc",
    rustc = "@nix_rust//:rustc",
    rustc_lib = "@nix_rust//:rustc_lib",
    staticlib_ext = ".lib",
    stdlib_linkflags = [],
    tags = ["manual"],
    target_triple = "x86_64-pc-windows-msvc",
)

toolchain(
    name = "toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:nixos",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    toolchain = ":rust_toolchain",
    toolchain_type = "@rules_rust//rust:toolchain_type",
)
